# JustAnotherMinecraftClone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: aldi_brand_minecraft_atlas.xcf
Assets/Meshes/Steve/: Steve.blend  Steve.blend1  Steve.glb  steve.fbx  steve2.fbx  steve3.fbx
Src/: CMakeLists.txt  Engine.hpp  Engine.mm  EngineInterface.hpp  MtlImplementation.cpp  VertexDataTypes.hpp  main.mm
Src/Core/: Camera.cpp  Camera.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  CoreTypes.hpp  Drawables.hpp  Queue.hpp  Texture.cpp  Texture.hpp
Src/Core/Mesh/: Animator.cpp  Animator.hpp  AssimpNodeManager.cpp  AssimpNodeManager.hpp  Mesh.hpp
Src/Gameplay/: Player.cpp  Player.hpp
Src/Gameplay/Physics/: PhysicsCoreTypes.hpp
Src/Math/: CommonMath.hpp  Frustum.hpp
Src/Shaders/Metal/: CMakeLists.txt  Deferred.metal  DeferredMesh.metal  GaussianBlur.metal  Lines.metal  PostProcess.metal  SSAO.metal  Shadow.metal  Skybox.metal  Triangle.metal  cmake_install.cmake
Src/Utilities/: Debug.hpp  Profiling.hpp
Src/Voxel/: VoxelTypes.hpp
Src/WorldGeneration/: PerlinNoiseGenerator.cpp  PerlinNoiseGenerator.hpp
